--- a/Web.config
+++ b/Web.config
@@ -12,13 +12,14 @@
 		<add key="Password" value="rajgarima"/>
 		<add key="Host" value="smtp.gmail.com"/>
 		<add key="ChartImageHandler" value="storage=file;timeout=20;dir=D:\WebSpace\kkstudies\camp.otsinfra.org\wwwroot\TempImageFiles\;"/>
-		<add key="VideoViewCount.ServiceUpdateAdView" value="http://localhost:49388/new_camp_08_12/ServiceUpdateAdView.asmx"/>
+    <add key="VideoViewCount.ServiceUpdateAdView" value="http://localhost:49388/new_camp_08_12/ServiceUpdateAdView.asmx"/>
+    <add key="appLocation" value="partners"/>
 	</appSettings>
 	<system.web>
 		<httpHandlers>
 			<add path="ChartImg.axd" verb="GET,HEAD,POST" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" validate="false"/>
 			<remove verb="*" path="*.asmx"/>
-			<add verb="*" path="*.asmx" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory,                         System.Web.Extensions, Version=1.0.61025.0,                         Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
+			<add verb="*" path="*.asmx" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=1.0.61025.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
 		</httpHandlers>
 		<pages>
 			<controls>
